--- a/TheVoodooProject/TheVoodooProject.API/TheVoodooProject.API.csproj
+++ b/TheVoodooProject/TheVoodooProject.API/TheVoodooProject.API.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.Azure.CognitiveServices.Language.TextAnalytics" Version="2.8.0-preview" />
   </ItemGroup>
 
 </Project>
