--- a/TheVoodooProject/TheVoodooProjectClient/package.json
+++ b/TheVoodooProject/TheVoodooProjectClient/package.json
@@ -11,18 +11,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.0",
+    "@angular/animations": "^6.1.10",
+    "@angular/cdk": "^7.0.4",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
+    "@angular/material": "^7.0.4",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "Gauge": "^1.0.2",
+    "angular-gauge": "^3.1.1",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "jquery": "^1.9.1",
+    "popper.js": "^1.14.5",
+    "react": "^16.6.3",
     "rxjs": "^6.0.0",
+    "svg-gauge": "^1.0.4",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
